--- a/src/app/feedback/feedback.component.html
+++ b/src/app/feedback/feedback.component.html
@@ -1,9 +1,13 @@
-<script src="https://cdn01.jotfor.ms/static/prototype.forms.js?3.3.42107" type="text/javascript"></script>
-<script src="https://cdn02.jotfor.ms/static/jotform.forms.js?3.3.42107" type="text/javascript"></script>
-<script src="https://cdn03.jotfor.ms/js/payments/validategateways.js?v=3.3.42107" type="text/javascript"></script>
+<script src="https://cdn01.jotfor.ms/static/prototype.forms.js?3.3.42394" type="text/javascript"></script>
+<script src="https://cdn02.jotfor.ms/static/jotform.forms.js?3.3.42394" type="text/javascript"></script>
+<script src="https://cdn03.jotfor.ms/js/payments/validategateways.js?v=3.3.42394" type="text/javascript"></script>
 <script
-    type="text/javascript">	JotForm.newDefaultTheme = true; JotForm.extendsNewTheme = false; JotForm.singleProduct = false; JotForm.newPaymentUIForNewCreatedForms = true; JotForm.newPaymentUI = true; JotForm.clearFieldOnHide = "disable"; JotForm.submitError = "jumpToFirstError"; JotForm.init(function () { /*INIT-START*/ JotForm.alterTexts(undefined); /*INIT-END*/ }); JotForm.prepareCalculationsOnTheFly([null, { "name": "heading", "qid": "1", "text": "Quiz Experience", "type": "control_head" }, { "name": "submit2", "qid": "2", "text": "Submit", "type": "control_button" }, { "description": "", "name": "typeA", "qid": "3", "text": "", "type": "control_matrix" }]); setTimeout(function () {
-            JotForm.paymentExtrasOnTheFly([null, { "name": "heading", "qid": "1", "text": "Quiz Experience", "type": "control_head" }, { "name": "submit2", "qid": "2", "text": "Submit", "type": "control_button" }, { "description": "", "name": "typeA", "qid": "3", "text": "", "type": "control_matrix" }]);
+    type="text/javascript">	JotForm.newDefaultTheme = true; JotForm.extendsNewTheme = false; JotForm.singleProduct = false; JotForm.newPaymentUIForNewCreatedForms = true; JotForm.newPaymentUI = true; JotForm.clearFieldOnHide = "disable"; JotForm.submitError = "jumpToFirstError"; JotForm.init(function () { /*INIT-START*/
+            if (window.JotForm && JotForm.accessible) $('input_9').setAttribute('tabindex', 0);
+            if (window.JotForm && JotForm.accessible) $('input_10').setAttribute('tabindex', 0);
+            if (window.JotForm && JotForm.accessible) $('input_11').setAttribute('tabindex', 0); JotForm.alterTexts(undefined); /*INIT-END*/
+        }); JotForm.prepareCalculationsOnTheFly([null, { "name": "heading", "qid": "1", "text": "Quiz Experience", "type": "control_head" }, { "name": "submit2", "qid": "2", "text": "Submit", "type": "control_button" }, { "description": "", "name": "typeA", "qid": "3", "text": "", "type": "control_matrix" }, null, { "description": "", "name": "name", "qid": "5", "text": "Name", "type": "control_fullname" }, null, null, null, { "description": "", "name": "age", "qid": "9", "subLabel": "", "text": "Age", "type": "control_textbox" }, { "description": "", "name": "educationalBackground", "qid": "10", "subLabel": "", "text": "Educational Background", "type": "control_textbox" }, { "description": "", "name": "professionalBackground", "qid": "11", "subLabel": "", "text": "Professional Background", "type": "control_textbox" }]); setTimeout(function () {
+            JotForm.paymentExtrasOnTheFly([null, { "name": "heading", "qid": "1", "text": "Quiz Experience", "type": "control_head" }, { "name": "submit2", "qid": "2", "text": "Submit", "type": "control_button" }, { "description": "", "name": "typeA", "qid": "3", "text": "", "type": "control_matrix" }, null, { "description": "", "name": "name", "qid": "5", "text": "Name", "type": "control_fullname" }, null, null, null, { "description": "", "name": "age", "qid": "9", "subLabel": "", "text": "Age", "type": "control_textbox" }, { "description": "", "name": "educationalBackground", "qid": "10", "subLabel": "", "text": "Educational Background", "type": "control_textbox" }, { "description": "", "name": "professionalBackground", "qid": "11", "subLabel": "", "text": "Professional Background", "type": "control_textbox" }]);
         }, 20); </script>
 <style type="text/css">
     @media print {
@@ -25,10 +29,127 @@
     }
 </style>
 <link type="text/css" rel="stylesheet"
-    href="https://cdn01.jotfor.ms/themes/CSS/5e6b428acc8c4e222d1beb91.css?v=3.3.42107" />
-<link type="text/css" rel="stylesheet" href="https://cdn02.jotfor.ms/css/styles/payment/payment_styles.css?3.3.42107" />
+    href="https://cdn01.jotfor.ms/themes/CSS/5e6b428acc8c4e222d1beb91.css?v=3.3.42394" />
+<link type="text/css" rel="stylesheet" href="https://cdn02.jotfor.ms/css/styles/payment/payment_styles.css?3.3.42394" />
 <link type="text/css" rel="stylesheet"
-    href="https://cdn03.jotfor.ms/css/styles/payment/payment_feature.css?3.3.42107" />
+    href="https://cdn03.jotfor.ms/css/styles/payment/payment_feature.css?3.3.42394" />
+<style type="text/css" id="form-designer-style">
+    /* Injected CSS Code */
+    /*PREFERENCES STYLE*/
+    .form-all {
+        font-family: Inter, sans-serif;
+    }
+
+    .form-label.form-label-auto {
+        display: block;
+        float: none;
+        text-align: left;
+        width: 100%;
+    }
+
+    .form-line {
+        margin-top: 12px;
+        margin-bottom: 12px;
+        padding-top: 0;
+        padding-bottom: 0;
+    }
+
+    .form-all {
+        max-width: 752px;
+        width: 100%;
+    }
+
+    .form-label.form-label-left,
+    .form-label.form-label-right,
+    .form-label.form-label-left.form-label-auto,
+    .form-label.form-label-right.form-label-auto {
+        width: 230px;
+    }
+
+    .form-all {
+        font-size: 16px
+    }
+
+    .supernova .form-all,
+    .form-all {
+        background-color: #91ecd0;
+    }
+
+    .form-all {
+        color: #2C3345;
+    }
+
+    .form-header-group .form-header {
+        color: #2C3345;
+    }
+
+    .form-header-group .form-subHeader {
+        color: #2C3345;
+    }
+
+    .form-label-top,
+    .form-label-left,
+    .form-label-right,
+    .form-html,
+    .form-checkbox-item label,
+    .form-radio-item label,
+    span.FITB .qb-checkbox-label,
+    span.FITB .qb-radiobox-label,
+    span.FITB .form-radio label,
+    span.FITB .form-checkbox label,
+    [data-blotid][data-type=checkbox] [data-labelid],
+    [data-blotid][data-type=radiobox] [data-labelid],
+    span.FITB-inptCont[data-type=checkbox] label,
+    span.FITB-inptCont[data-type=radiobox] label {
+        color: #2C3345;
+    }
+
+    .form-sub-label {
+        color: #464d5f;
+    }
+
+    .supernova {
+        background-color: #f3f3fe;
+    }
+
+    .supernova body {
+        background: transparent;
+    }
+
+    .form-textbox,
+    .form-textarea,
+    .form-dropdown,
+    .form-radio-other-input,
+    .form-checkbox-other-input,
+    .form-captcha input,
+    .form-spinner input {
+        background-color: #fff;
+    }
+
+    .supernova {
+        background-image: none;
+    }
+
+    #stage {
+        background-image: none;
+    }
+
+    .form-all {
+        background-image: none;
+    }
+
+    .form-all:before {
+        content: none;
+    }
+
+    .form-all {
+        margin-top: 72px;
+    }
+
+    /*PREFERENCES STYLE*/
+    /*__INSPECT_SEPERATOR__*/
+    /* Injected CSS Code */
+</style>
 <form class="jotform-form" ngNoForm action="https://eu-submit.jotform.com/submit/231326555393054" method="post"
     name="form_231326555393054" id="231326555393054" accept-charset="utf-8" autocomplete="on"><input type="hidden"
         name="formID" value="231326555393054" /><input type="hidden" id="JWTContainer" value="" /><input type="hidden"
@@ -42,6 +163,47 @@
                         <div id="subHeader_1" class="form-subHeader">Take a small survey on the quiz you just took</div>
                     </div>
                 </div>
+            </li>
+            <li class="form-line" data-type="control_fullname" id="id_5"><label
+                    class="form-label form-label-top form-label-auto" id="label_5" for="first_5"> Name </label>
+                <div id="cid_5" class="form-input-wide" data-layout="full">
+                    <div data-wrapper-react="true"><span class="form-sub-label-container" style="vertical-align:top"
+                            data-input-type="first"><input type="text" id="first_5" name="q5_name[first]"
+                                class="form-textbox" data-defaultvalue="" autoComplete="section-input_5 given-name"
+                                size="10" value="" data-component="first"
+                                aria-labelledby="label_5 sublabel_5_first" /><label class="form-sub-label" for="first_5"
+                                id="sublabel_5_first" style="min-height:13px" aria-hidden="false">First
+                                Name</label></span><span class="form-sub-label-container" style="vertical-align:top"
+                            data-input-type="last"><input type="text" id="last_5" name="q5_name[last]"
+                                class="form-textbox" data-defaultvalue="" autoComplete="section-input_5 family-name"
+                                size="15" value="" data-component="last"
+                                aria-labelledby="label_5 sublabel_5_last" /><label class="form-sub-label" for="last_5"
+                                id="sublabel_5_last" style="min-height:13px" aria-hidden="false">Last
+                                Name</label></span></div>
+                </div>
+            </li>
+            <li class="form-line" data-type="control_textbox" id="id_9"><label
+                    class="form-label form-label-top form-label-auto" id="label_9" for="input_9"> Age </label>
+                <div id="cid_9" class="form-input-wide" data-layout="half"> <input type="text" id="input_9"
+                        name="q9_age" data-type="input-textbox" class="form-textbox" data-defaultvalue=""
+                        style="width:310px" size="310" value="" data-component="textbox" aria-labelledby="label_9" />
+                </div>
+            </li>
+            <li class="form-line" data-type="control_textbox" id="id_10"><label
+                    class="form-label form-label-top form-label-auto" id="label_10" for="input_10"> Educational
+                    Background </label>
+                <div id="cid_10" class="form-input-wide" data-layout="half"> <input type="text" id="input_10"
+                        name="q10_educationalBackground" data-type="input-textbox" class="form-textbox"
+                        data-defaultvalue="" style="width:310px" size="310" value="" data-component="textbox"
+                        aria-labelledby="label_10" /> </div>
+            </li>
+            <li class="form-line" data-type="control_textbox" id="id_11"><label
+                    class="form-label form-label-top form-label-auto" id="label_11" for="input_11"> Professional
+                    Background </label>
+                <div id="cid_11" class="form-input-wide" data-layout="half"> <input type="text" id="input_11"
+                        name="q11_professionalBackground" data-type="input-textbox" class="form-textbox"
+                        data-defaultvalue="" style="width:310px" size="310" value="" data-component="textbox"
+                        aria-labelledby="label_11" /> </div>
             </li>
             <li class="form-line" data-type="control_matrix" id="id_3"><label
                     class="form-label form-label-top form-label-auto" id="label_3" for="input_3"> </label>
@@ -188,9 +350,20 @@
         id="simple_spc" name="simple_spc" value="231326555393054" />
     <script
         type="text/javascript"> var all_spc = document.querySelectorAll("form[id='231326555393054'] .si" + "mple" + "_spc"); for (var i = 0; i < all_spc.length; i++) { all_spc[i].value = "231326555393054-231326555393054"; } </script>
-   
+    <div class="formFooter-heightMask"></div>
+    <div class="formFooter f6 branding21">
+        <div class="formFooter-wrapper formFooter-leftSide"><a
+                href="https://www.jotform.com/?utm_source=formfooter&utm_medium=banner&utm_term=231326555393054&utm_content=jotform_logo&utm_campaign=powered_by_jotform_le"
+                target="_blank" class="formFooter-logoLink"><img class="formFooter-logo"
+                    src="https://cdn.jotfor.ms/assets/img/logo2021/jotform-logo-white.svg" alt="Jotform Logo"
+                    style="height: 44px;"></a></div>
+        <div class="formFooter-wrapper formFooter-rightSide"><span class="formFooter-text">Now create your own Jotform -
+                It's free!</span><a class="formFooter-button"
+                href="https://www.jotform.com/?utm_source=formfooter&utm_medium=banner&utm_term=231326555393054&utm_content=jotform_button&utm_campaign=powered_by_jotform_le"
+                target="_blank">Create your own Jotform</a></div>
+    </div>
 </form>
 <script type="text/javascript">JotForm.ownerView = true;</script>
 <script type="text/javascript">JotForm.forwardToEu = true;</script>
-<script src="https://cdn.jotfor.ms//js/vendor/smoothscroll.min.js?v=3.3.42107"></script>
-<script src="https://cdn.jotfor.ms//js/errorNavigation.js?v=3.3.42107"></script>
+<script src="https://cdn.jotfor.ms//js/vendor/smoothscroll.min.js?v=3.3.42394"></script>
+<script src="https://cdn.jotfor.ms//js/errorNavigation.js?v=3.3.42394"></script>
