--- a/src/app/postfeedback/postfeedback.component.html
+++ b/src/app/postfeedback/postfeedback.component.html
@@ -1,9 +1,13 @@
-<script src="https://cdn01.jotfor.ms/static/prototype.forms.js?3.3.42107" type="text/javascript"></script>
-<script src="https://cdn02.jotfor.ms/static/jotform.forms.js?3.3.42107" type="text/javascript"></script>
-<script src="https://cdn03.jotfor.ms/js/payments/validategateways.js?v=3.3.42107" type="text/javascript"></script>
+<script src="https://cdn01.jotfor.ms/static/prototype.forms.js?3.3.42394" type="text/javascript"></script>
+<script src="https://cdn02.jotfor.ms/static/jotform.forms.js?3.3.42394" type="text/javascript"></script>
+<script src="https://cdn03.jotfor.ms/js/payments/validategateways.js?v=3.3.42394" type="text/javascript"></script>
 <script
-  type="text/javascript">	JotForm.newDefaultTheme = true; JotForm.extendsNewTheme = false; JotForm.singleProduct = false; JotForm.newPaymentUIForNewCreatedForms = true; JotForm.newPaymentUI = true; JotForm.clearFieldOnHide = "disable"; JotForm.submitError = "jumpToFirstError"; JotForm.init(function () { /*INIT-START*/ JotForm.alterTexts(undefined); /*INIT-END*/ }); JotForm.prepareCalculationsOnTheFly([null, { "name": "heading", "qid": "1", "text": "Post Quiz Experience", "type": "control_head" }, { "name": "submit2", "qid": "2", "text": "Submit", "type": "control_button" }, null, { "description": "", "name": "typeA", "qid": "4", "text": "", "type": "control_matrix" }, null, null, null, null, null, null, null, null, null, null, null, null, { "name": "howWas", "qid": "17", "text": "How was your Experience with Chatbot", "type": "control_head" }, { "description": "", "name": "typeA18", "qid": "18", "text": "1 being 'Fake' and 5 being 'Natural' ", "type": "control_scale" }, { "description": "", "name": "typeA19", "qid": "19", "text": "1 being 'Machinelike' and 5 being 'Humanlike' ", "type": "control_scale" }, { "description": "", "name": "typeA20", "qid": "20", "text": "1 being 'Unconscious' and 5 being 'Conscious' ", "type": "control_scale" }, { "description": "", "name": "typeA21", "qid": "21", "text": "1 being 'Artificial' and 5 being 'Lifelike' ", "type": "control_scale" }, { "description": "", "name": "typeA22", "qid": "22", "text": "1 being 'Rigid' and 5 being 'Elegant' ", "type": "control_scale" }, null, { "name": "howWas24", "qid": "24", "text": "how would you rate your overall liking of the chatbot", "type": "control_head" }, { "description": "", "name": "typeA25", "qid": "25", "text": "1 being 'Dislike' and 5 being 'Like' ", "type": "control_scale" }, { "description": "", "name": "1Being", "qid": "26", "text": "1 being 'Unfriendly' and 5 being 'Friendly' ", "type": "control_scale" }, { "description": "", "name": "1Being27", "qid": "27", "text": "1 being 'Unkind' and 5 being 'Kind' ", "type": "control_scale" }, { "description": "", "name": "1Being28", "qid": "28", "text": "1 being 'Unpleasant' and 5 being 'Pleasant' ", "type": "control_scale" }, { "description": "", "name": "1Being29", "qid": "29", "text": "1 being 'Awful' and 5 being 'Nice' ", "type": "control_scale" }]); setTimeout(function () {
-      JotForm.paymentExtrasOnTheFly([null, { "name": "heading", "qid": "1", "text": "Post Quiz Experience", "type": "control_head" }, { "name": "submit2", "qid": "2", "text": "Submit", "type": "control_button" }, null, { "description": "", "name": "typeA", "qid": "4", "text": "", "type": "control_matrix" }, null, null, null, null, null, null, null, null, null, null, null, null, { "name": "howWas", "qid": "17", "text": "How was your Experience with Chatbot", "type": "control_head" }, { "description": "", "name": "typeA18", "qid": "18", "text": "1 being 'Fake' and 5 being 'Natural' ", "type": "control_scale" }, { "description": "", "name": "typeA19", "qid": "19", "text": "1 being 'Machinelike' and 5 being 'Humanlike' ", "type": "control_scale" }, { "description": "", "name": "typeA20", "qid": "20", "text": "1 being 'Unconscious' and 5 being 'Conscious' ", "type": "control_scale" }, { "description": "", "name": "typeA21", "qid": "21", "text": "1 being 'Artificial' and 5 being 'Lifelike' ", "type": "control_scale" }, { "description": "", "name": "typeA22", "qid": "22", "text": "1 being 'Rigid' and 5 being 'Elegant' ", "type": "control_scale" }, null, { "name": "howWas24", "qid": "24", "text": "how would you rate your overall liking of the chatbot", "type": "control_head" }, { "description": "", "name": "typeA25", "qid": "25", "text": "1 being 'Dislike' and 5 being 'Like' ", "type": "control_scale" }, { "description": "", "name": "1Being", "qid": "26", "text": "1 being 'Unfriendly' and 5 being 'Friendly' ", "type": "control_scale" }, { "description": "", "name": "1Being27", "qid": "27", "text": "1 being 'Unkind' and 5 being 'Kind' ", "type": "control_scale" }, { "description": "", "name": "1Being28", "qid": "28", "text": "1 being 'Unpleasant' and 5 being 'Pleasant' ", "type": "control_scale" }, { "description": "", "name": "1Being29", "qid": "29", "text": "1 being 'Awful' and 5 being 'Nice' ", "type": "control_scale" }]);
+  type="text/javascript">	JotForm.newDefaultTheme = true; JotForm.extendsNewTheme = false; JotForm.singleProduct = false; JotForm.newPaymentUIForNewCreatedForms = true; JotForm.newPaymentUI = true; JotForm.clearFieldOnHide = "disable"; JotForm.submitError = "jumpToFirstError"; JotForm.init(function () { /*INIT-START*/
+      if (window.JotForm && JotForm.accessible) $('input_32').setAttribute('tabindex', 0);
+      if (window.JotForm && JotForm.accessible) $('input_33').setAttribute('tabindex', 0);
+      if (window.JotForm && JotForm.accessible) $('input_34').setAttribute('tabindex', 0); JotForm.alterTexts(undefined); /*INIT-END*/
+    }); JotForm.prepareCalculationsOnTheFly([null, { "name": "heading", "qid": "1", "text": "Post Quiz Experience", "type": "control_head" }, { "name": "submit2", "qid": "2", "text": "Submit", "type": "control_button" }, null, { "description": "", "name": "typeA", "qid": "4", "text": "", "type": "control_matrix" }, null, null, null, null, null, null, null, null, null, null, null, null, { "name": "howWas", "qid": "17", "text": "How was your Experience with Chatbot", "type": "control_head" }, { "description": "", "name": "typeA18", "qid": "18", "text": "1 being 'Fake' and 5 being 'Natural' ", "type": "control_scale" }, { "description": "", "name": "typeA19", "qid": "19", "text": "1 being 'Machinelike' and 5 being 'Humanlike' ", "type": "control_scale" }, { "description": "", "name": "typeA20", "qid": "20", "text": "1 being 'Unconscious' and 5 being 'Conscious' ", "type": "control_scale" }, { "description": "", "name": "typeA21", "qid": "21", "text": "1 being 'Artificial' and 5 being 'Lifelike' ", "type": "control_scale" }, { "description": "", "name": "typeA22", "qid": "22", "text": "1 being 'Rigid' and 5 being 'Elegant' ", "type": "control_scale" }, null, { "name": "howWas24", "qid": "24", "text": "how would you rate your overall liking of the chatbot", "type": "control_head" }, { "description": "", "name": "typeA25", "qid": "25", "text": "1 being 'Dislike' and 5 being 'Like' ", "type": "control_scale" }, { "description": "", "name": "1Being", "qid": "26", "text": "1 being 'Unfriendly' and 5 being 'Friendly' ", "type": "control_scale" }, { "description": "", "name": "1Being27", "qid": "27", "text": "1 being 'Unkind' and 5 being 'Kind' ", "type": "control_scale" }, { "description": "", "name": "1Being28", "qid": "28", "text": "1 being 'Unpleasant' and 5 being 'Pleasant' ", "type": "control_scale" }, { "description": "", "name": "1Being29", "qid": "29", "text": "1 being 'Awful' and 5 being 'Nice' ", "type": "control_scale" }, null, { "description": "", "name": "name", "qid": "31", "text": "Name", "type": "control_fullname" }, { "description": "", "name": "age", "qid": "32", "subLabel": "", "text": "Age", "type": "control_textbox" }, { "description": "", "name": "educationalBackground33", "qid": "33", "subLabel": "", "text": "Educational Background", "type": "control_textbox" }, { "description": "", "name": "professionalBackground", "qid": "34", "subLabel": "", "text": "Professional Background", "type": "control_textbox" }]); setTimeout(function () {
+      JotForm.paymentExtrasOnTheFly([null, { "name": "heading", "qid": "1", "text": "Post Quiz Experience", "type": "control_head" }, { "name": "submit2", "qid": "2", "text": "Submit", "type": "control_button" }, null, { "description": "", "name": "typeA", "qid": "4", "text": "", "type": "control_matrix" }, null, null, null, null, null, null, null, null, null, null, null, null, { "name": "howWas", "qid": "17", "text": "How was your Experience with Chatbot", "type": "control_head" }, { "description": "", "name": "typeA18", "qid": "18", "text": "1 being 'Fake' and 5 being 'Natural' ", "type": "control_scale" }, { "description": "", "name": "typeA19", "qid": "19", "text": "1 being 'Machinelike' and 5 being 'Humanlike' ", "type": "control_scale" }, { "description": "", "name": "typeA20", "qid": "20", "text": "1 being 'Unconscious' and 5 being 'Conscious' ", "type": "control_scale" }, { "description": "", "name": "typeA21", "qid": "21", "text": "1 being 'Artificial' and 5 being 'Lifelike' ", "type": "control_scale" }, { "description": "", "name": "typeA22", "qid": "22", "text": "1 being 'Rigid' and 5 being 'Elegant' ", "type": "control_scale" }, null, { "name": "howWas24", "qid": "24", "text": "how would you rate your overall liking of the chatbot", "type": "control_head" }, { "description": "", "name": "typeA25", "qid": "25", "text": "1 being 'Dislike' and 5 being 'Like' ", "type": "control_scale" }, { "description": "", "name": "1Being", "qid": "26", "text": "1 being 'Unfriendly' and 5 being 'Friendly' ", "type": "control_scale" }, { "description": "", "name": "1Being27", "qid": "27", "text": "1 being 'Unkind' and 5 being 'Kind' ", "type": "control_scale" }, { "description": "", "name": "1Being28", "qid": "28", "text": "1 being 'Unpleasant' and 5 being 'Pleasant' ", "type": "control_scale" }, { "description": "", "name": "1Being29", "qid": "29", "text": "1 being 'Awful' and 5 being 'Nice' ", "type": "control_scale" }, null, { "description": "", "name": "name", "qid": "31", "text": "Name", "type": "control_fullname" }, { "description": "", "name": "age", "qid": "32", "subLabel": "", "text": "Age", "type": "control_textbox" }, { "description": "", "name": "educationalBackground33", "qid": "33", "subLabel": "", "text": "Educational Background", "type": "control_textbox" }, { "description": "", "name": "professionalBackground", "qid": "34", "subLabel": "", "text": "Professional Background", "type": "control_textbox" }]);
     }, 20); </script>
 <style type="text/css">
   @media print {
@@ -25,10 +29,10 @@
   }
 </style>
 <link type="text/css" rel="stylesheet"
-  href="https://cdn01.jotfor.ms/themes/CSS/5e6b428acc8c4e222d1beb91.css?v=3.3.42107" />
-<link type="text/css" rel="stylesheet" href="https://cdn02.jotfor.ms/css/styles/payment/payment_styles.css?3.3.42107" />
+  href="https://cdn01.jotfor.ms/themes/CSS/5e6b428acc8c4e222d1beb91.css?v=3.3.42394" />
+<link type="text/css" rel="stylesheet" href="https://cdn02.jotfor.ms/css/styles/payment/payment_styles.css?3.3.42394" />
 <link type="text/css" rel="stylesheet"
-  href="https://cdn03.jotfor.ms/css/styles/payment/payment_feature.css?3.3.42107" />
+  href="https://cdn03.jotfor.ms/css/styles/payment/payment_feature.css?3.3.42394" />
 <style type="text/css" id="form-designer-style">
   /* Injected CSS Code */
   /*PREFERENCES STYLE*/
@@ -682,6 +686,42 @@
           </div>
         </div>
       </li>
+      <li class="form-line" data-type="control_fullname" id="id_31"><label
+          class="form-label form-label-top form-label-auto" id="label_31" for="first_31"> Name </label>
+        <div id="cid_31" class="form-input-wide" data-layout="full">
+          <div data-wrapper-react="true"><span class="form-sub-label-container" style="vertical-align:top"
+              data-input-type="first"><input type="text" id="first_31" name="q31_name[first]" class="form-textbox"
+                data-defaultvalue="" autoComplete="section-input_31 given-name" size="10" value=""
+                data-component="first" aria-labelledby="label_31 sublabel_31_first" /><label class="form-sub-label"
+                for="first_31" id="sublabel_31_first" style="min-height:13px" aria-hidden="false">First
+                Name</label></span><span class="form-sub-label-container" style="vertical-align:top"
+              data-input-type="last"><input type="text" id="last_31" name="q31_name[last]" class="form-textbox"
+                data-defaultvalue="" autoComplete="section-input_31 family-name" size="15" value=""
+                data-component="last" aria-labelledby="label_31 sublabel_31_last" /><label class="form-sub-label"
+                for="last_31" id="sublabel_31_last" style="min-height:13px" aria-hidden="false">Last Name</label></span>
+          </div>
+        </div>
+      </li>
+      <li class="form-line" data-type="control_textbox" id="id_32"><label
+          class="form-label form-label-top form-label-auto" id="label_32" for="input_32"> Age </label>
+        <div id="cid_32" class="form-input-wide" data-layout="half"> <input type="text" id="input_32" name="q32_age"
+            data-type="input-textbox" class="form-textbox" data-defaultvalue="" style="width:310px" size="310" value=""
+            data-component="textbox" aria-labelledby="label_32" /> </div>
+      </li>
+      <li class="form-line" data-type="control_textbox" id="id_33"><label
+          class="form-label form-label-top form-label-auto" id="label_33" for="input_33"> Educational Background
+        </label>
+        <div id="cid_33" class="form-input-wide" data-layout="half"> <input type="text" id="input_33"
+            name="q33_educationalBackground33" data-type="input-textbox" class="form-textbox" data-defaultvalue=""
+            style="width:310px" size="310" value="" data-component="textbox" aria-labelledby="label_33" /> </div>
+      </li>
+      <li class="form-line" data-type="control_textbox" id="id_34"><label
+          class="form-label form-label-top form-label-auto" id="label_34" for="input_34"> Professional Background
+        </label>
+        <div id="cid_34" class="form-input-wide" data-layout="half"> <input type="text" id="input_34"
+            name="q34_professionalBackground" data-type="input-textbox" class="form-textbox" data-defaultvalue=""
+            style="width:310px" size="310" value="" data-component="textbox" aria-labelledby="label_34" /> </div>
+      </li>
       <li class="form-line" data-type="control_matrix" id="id_4"><label
           class="form-label form-label-top form-label-auto" id="label_4" for="input_4"> </label>
         <div id="cid_4" class="form-input-wide" data-layout="full">
@@ -1101,10 +1141,20 @@
     id="simple_spc" name="simple_spc" value="231425806053046" />
   <script
     type="text/javascript"> var all_spc = document.querySelectorAll("form[id='231425806053046'] .si" + "mple" + "_spc"); for (var i = 0; i < all_spc.length; i++) { all_spc[i].value = "231425806053046-231425806053046"; } </script>
-  
-  
+  <div class="formFooter-heightMask"></div>
+  <div class="formFooter f6 branding21">
+    <div class="formFooter-wrapper formFooter-leftSide"><a
+        href="https://www.jotform.com/?utm_source=formfooter&utm_medium=banner&utm_term=231425806053046&utm_content=jotform_logo&utm_campaign=powered_by_jotform_le"
+        target="_blank" class="formFooter-logoLink"><img class="formFooter-logo"
+          src="https://cdn.jotfor.ms/assets/img/logo2021/jotform-logo-white.svg" alt="Jotform Logo"
+          style="height: 44px;"></a></div>
+    <div class="formFooter-wrapper formFooter-rightSide"><span class="formFooter-text">Now create your own Jotform -
+        It's free!</span><a class="formFooter-button"
+        href="https://www.jotform.com/?utm_source=formfooter&utm_medium=banner&utm_term=231425806053046&utm_content=jotform_button&utm_campaign=powered_by_jotform_le"
+        target="_blank">Create your own Jotform</a></div>
+  </div>
 </form>
 <script type="text/javascript">JotForm.ownerView = true;</script>
 <script type="text/javascript">JotForm.forwardToEu = true;</script>
-<script src="https://cdn.jotfor.ms//js/vendor/smoothscroll.min.js?v=3.3.42107"></script>
-<script src="https://cdn.jotfor.ms//js/errorNavigation.js?v=3.3.42107"></script>
+<script src="https://cdn.jotfor.ms//js/vendor/smoothscroll.min.js?v=3.3.42394"></script>
+<script src="https://cdn.jotfor.ms//js/errorNavigation.js?v=3.3.42394"></script>
