--- a/src/app/feedback/feedback.component.html
+++ b/src/app/feedback/feedback.component.html
@@ -1,13 +1,13 @@
-<script src="https://cdn01.jotfor.ms/static/prototype.forms.js?3.3.42703" type="text/javascript"></script>
-<script src="https://cdn02.jotfor.ms/static/jotform.forms.js?3.3.42703" type="text/javascript"></script>
-<script src="https://cdn03.jotfor.ms/js/payments/validategateways.js?v=3.3.42703" type="text/javascript"></script>
+<script src="https://cdn02.jotfor.ms/static/prototype.forms.js?3.3.42979" type="text/javascript"></script>
+<script src="https://cdn03.jotfor.ms/static/jotform.forms.js?3.3.42979" type="text/javascript"></script>
+<script src="https://cdn01.jotfor.ms/js/payments/validategateways.js?v=3.3.42979" type="text/javascript"></script>
 <script
     type="text/javascript">	JotForm.newDefaultTheme = true; JotForm.extendsNewTheme = false; JotForm.singleProduct = false; JotForm.newPaymentUIForNewCreatedForms = true; JotForm.newPaymentUI = true; JotForm.clearFieldOnHide = "disable"; JotForm.submitError = "jumpToFirstError"; JotForm.init(function () { /*INIT-START*/
             if (window.JotForm && JotForm.accessible) $('input_5').setAttribute('tabindex', 0);
             if (window.JotForm && JotForm.accessible) $('input_6').setAttribute('tabindex', 0);
             if (window.JotForm && JotForm.accessible) $('input_7').setAttribute('tabindex', 0); JotForm.alterTexts(undefined); /*INIT-END*/
-        }); JotForm.prepareCalculationsOnTheFly([null, { "name": "heading", "qid": "1", "text": "Quiz Experience", "type": "control_head" }, { "name": "submit2", "qid": "2", "text": "Submit", "type": "control_button" }, { "description": "", "name": "typeA", "qid": "3", "text": "Type a question", "type": "control_matrix" }, { "description": "", "name": "name", "qid": "4", "text": "Name", "type": "control_fullname" }, { "description": "", "name": "age", "qid": "5", "subLabel": "", "text": "Age", "type": "control_textbox" }, { "description": "", "name": "educationalBackground", "qid": "6", "subLabel": "", "text": "Educational Background", "type": "control_textbox" }, { "description": "", "name": "professionalBackground", "qid": "7", "subLabel": "", "text": "Professional Background", "type": "control_textbox" }]); setTimeout(function () {
-            JotForm.paymentExtrasOnTheFly([null, { "name": "heading", "qid": "1", "text": "Quiz Experience", "type": "control_head" }, { "name": "submit2", "qid": "2", "text": "Submit", "type": "control_button" }, { "description": "", "name": "typeA", "qid": "3", "text": "Type a question", "type": "control_matrix" }, { "description": "", "name": "name", "qid": "4", "text": "Name", "type": "control_fullname" }, { "description": "", "name": "age", "qid": "5", "subLabel": "", "text": "Age", "type": "control_textbox" }, { "description": "", "name": "educationalBackground", "qid": "6", "subLabel": "", "text": "Educational Background", "type": "control_textbox" }, { "description": "", "name": "professionalBackground", "qid": "7", "subLabel": "", "text": "Professional Background", "type": "control_textbox" }]);
+        }); JotForm.prepareCalculationsOnTheFly([null, { "name": "heading", "qid": "1", "text": "Quiz Experience", "type": "control_head" }, { "name": "submit2", "qid": "2", "text": "Submit", "type": "control_button" }, { "description": "", "name": "typeA", "qid": "3", "text": "", "type": "control_matrix" }, { "description": "", "name": "name", "qid": "4", "text": "Name", "type": "control_fullname" }, { "description": "", "name": "age", "qid": "5", "subLabel": "", "text": "Age", "type": "control_textbox" }, { "description": "", "name": "educationalBackground", "qid": "6", "subLabel": "", "text": "Educational Background", "type": "control_textbox" }, { "description": "", "name": "professionalBackground", "qid": "7", "subLabel": "", "text": "Professional Background", "type": "control_textbox" }]); setTimeout(function () {
+            JotForm.paymentExtrasOnTheFly([null, { "name": "heading", "qid": "1", "text": "Quiz Experience", "type": "control_head" }, { "name": "submit2", "qid": "2", "text": "Submit", "type": "control_button" }, { "description": "", "name": "typeA", "qid": "3", "text": "", "type": "control_matrix" }, { "description": "", "name": "name", "qid": "4", "text": "Name", "type": "control_fullname" }, { "description": "", "name": "age", "qid": "5", "subLabel": "", "text": "Age", "type": "control_textbox" }, { "description": "", "name": "educationalBackground", "qid": "6", "subLabel": "", "text": "Educational Background", "type": "control_textbox" }, { "description": "", "name": "professionalBackground", "qid": "7", "subLabel": "", "text": "Professional Background", "type": "control_textbox" }]);
         }, 20); </script>
 <style type="text/css">
     @media print {
@@ -29,10 +29,11 @@
     }
 </style>
 <link type="text/css" rel="stylesheet"
-    href="https://cdn01.jotfor.ms/themes/CSS/5e6b428acc8c4e222d1beb91.css?v=3.3.42703" />
-<link type="text/css" rel="stylesheet" href="https://cdn02.jotfor.ms/css/styles/payment/payment_styles.css?3.3.42703" />
+    href="https://cdn01.jotfor.ms/themes/CSS/5e6b428acc8c4e222d1beb91.css?v=3.3.42979" />
+<link type="text/css" rel="stylesheet" href="https://cdn02.jotfor.ms/css/styles/payment/payment_styles.css?3.3.42979" />
 <link type="text/css" rel="stylesheet"
-    href="https://cdn03.jotfor.ms/css/styles/payment/payment_feature.css?3.3.42703" />
+    href="https://cdn03.jotfor.ms/css/styles/payment/payment_feature.css?3.3.42979" />
+<link type="text/css" rel="stylesheet" href="https://cdn01.jotfor.ms/stylebuilder/donationBox.css?v=3.3.42979">
 <style type="text/css" id="form-designer-style">
     /* Injected CSS Code */
     /*PREFERENCES STYLE*/
@@ -209,8 +210,7 @@
                         aria-labelledby="label_7" /> </div>
             </li>
             <li class="form-line" data-type="control_matrix" id="id_3"><label
-                    class="form-label form-label-top form-label-auto" id="label_3" for="input_3"> Type a question
-                </label>
+                    class="form-label form-label-top form-label-auto" id="label_3" for="input_3"> </label>
                 <div id="cid_3" class="form-input-wide" data-layout="full">
                     <table summary="" aria-labelledby="label_3" cellPadding="4" cellSpacing="0"
                         class="form-matrix-table" data-component="matrix">
@@ -369,5 +369,5 @@
 </form>
 <script type="text/javascript">JotForm.ownerView = true;</script>
 <script type="text/javascript">JotForm.forwardToEu = true;</script>
-<script src="https://cdn.jotfor.ms//js/vendor/smoothscroll.min.js?v=3.3.42703"></script>
-<script src="https://cdn.jotfor.ms//js/errorNavigation.js?v=3.3.42703"></script>
+<script src="https://cdn.jotfor.ms//js/vendor/smoothscroll.min.js?v=3.3.42979"></script>
+<script src="https://cdn.jotfor.ms//js/errorNavigation.js?v=3.3.42979"></script>
